--- a/AI_industry_trends.html
+++ b/AI_industry_trends.html
@@ -51,6 +51,10 @@
 
 
 
+
+    <a href="https://www.youtube.com/watch?v=hS4d3xAZgCg" target="_blank" title="조코딩">
+      이제 개발자도 실직 위기? 충격적인 5가지 최신 인공지능 기술을 소개합니다</a><br>
+
     <a href="https://www.youtube.com/watch?v=0NIUVzg7CRk" target="_blank" title="SURPRISER">
       2020년~2099년 인류 타임라인 - 제 2의 기계 시대</a><br>
 
