--- a/Stock_investment.html
+++ b/Stock_investment.html
@@ -51,6 +51,48 @@
 
 
 
+    <a href="https://www.youtube.com/watch?v=2Nq1qzkaSn0" taregt="_blank" target="시간여행TV">
+      주식으로 2년동안 100억 수익, 그 중 손절은 몇 종목??</a><br>
+
+      <p>
+        종목을 고를 때는 재료가 확실하고, 재무제표가 좋고, 수급이 좋은 종목을 골라야 합니다.
+        수급이 좋다는 것은 누군가 꾸준히 물량을 모으고 있다는 느낌을 말합니다.
+        그걸 어떻게 아냐면
+        매수호가에 뜬금없이 1억, 2억씩 박혀있거나,
+        장중 내내 흐르다가 3시 20분부터 동시호가 관리를 해주는 종목들이 있는데 이에 관해서는 나중에 얘기를 해보겠습니다.
+
+        정치테마주는 사실 저가에 잘 잡으면 무조건 올라요.
+        좋은 회사를 좋은 가격에 사서 좋은 가격에 팔면 된다고 하는데
+        정치테마주는 좋은 회사일 필요도 없고,
+        좋은 가격에 팔 필요도 없고,
+        좋은 가격에 사기만 하면 되는데,
+        그 좋은 가격이 언제냐면,
+        듣보잡 정치인이든 유력 정치인이든
+        그 정치인의 가족주나 대선주자의 대장주인데
+        시가총액이 500억 밖에 안되는 종목이면 사놓고 기다리기만 하면 올라요.
+        유력 대선주자의 가족주인데 저점 대비 50% 밖에 안올랐다 이러면
+        사놓고 기다리면 올라요.
+        미세먼지 관련주의 경우도 거래량 안터지고 계속 쭉쭉 빠진다 싶을 때,
+        그러니까 5일선이랑 20일선은 하방으로 보고 있는데
+        60일선이나 120일선 정도 지지한다 생각되면 그 때 사놓고 그냥 기다리는 거에요.
+
+        대형주는 단타 매매하기가 너무 좋아요.
+        왜냐하면 코스피가 박스권이거든요.
+        제 생각에는 1900에서 2150 박스권인데,
+        진짜 아래로 슈팅 나온다 치면 1850까지 뚫릴 때도 있고
+        2250까지 뚫릴 때도 있는데
+        그 때를 무조건 매수, 매도하는 구간으로 잡는거에요.
+        연기금이 대형주 어떻게 매매하는지 한 번 공부해보세요.
+        연기금이 진짜 매매 잘해요.
+        대형주 매매할 때는 그냥 연기금 따라가면 크게 손해보는 일은 없어요.
+        조심해야 할 건,
+        연기금이 5% 가지고 있는 종목을 10%로 비중을 늘릴 때
+        그거 따라갔다가 물리는 경우가 있거든요.
+        가장 이상적인건 연기금이 0~5%까지 사고 있는 종목들의 경우인데
+        승률이 6개월 기준으로 75%에요.
+        하락장에서 기계적으로 매수를 하는게 비결이에요.
+      </p>
+
     <a href="https://www.youtube.com/watch?v=YhYMUQfbVx8" taregt="_blank" target="시간여행TV">
       팍스넷 하한가, 충분히 예고되었던 참사</a><br>
 
