--- a/Strategy_and_tactics.html
+++ b/Strategy_and_tactics.html
@@ -51,6 +51,10 @@
 
 
 
+
+    <a href="https://www.youtube.com/watch?v=WUR4sBjQPss" target="_blank" title="아구TV">
+      [스타2] 스타크래프트2 강의 Part. 2 [테란 입문편]</a><br>
+
     <a href="https://www.youtube.com/watch?v=WnhM3hQ-5oE" target="_blank" title="슈비이닝장기">
       [장기]어느쪽 졸병을 열어야 할까?</a><br>
 
