--- a/Game_industry_trends.html
+++ b/Game_industry_trends.html
@@ -50,6 +50,10 @@
     <h1>Game Industry Trends</h1><br><br><br>
 
 
+
+    <a href="https://www.youtube.com/watch?v=FGXRVk_d0QI" target="_blank" title="디스이즈게임">
+      워크래프트3 리포지드 논란이 암시하는 진짜 위험</a><br>
+
     <a href="https://www.youtube.com/watch?v=AYqox5Mf7us&list=WL" target="_blank" title="G식백과">
       리포지드 깐프사태, 주범을 찾아라</a><br>
 
