--- a/Show_yourself.html
+++ b/Show_yourself.html
@@ -50,6 +50,9 @@
     <h1>Show Yourself</h1><br><br><br>
 
 
+    <a href="https://www.youtube.com/watch?v=W8dImvaJJv8" target="_blank" title="신사임당">
+      부자가 될 사람인지 하루만에 알아내는 방법 (존리)</a><br>
+
     <a href="https://www.youtube.com/watch?v=DFbVV-rQxak" target="_blank" title="라이프해커자청">
       연봉 10억을 만들어준 심리학 5개, 4편 뇌욕망의 비밀을 풀다</a><br>
 
