--- a/Stock_investment.html
+++ b/Stock_investment.html
@@ -51,6 +51,13 @@
 
 
 
+    <a href="https://www.youtube.com/watch?v=28yPis20CaY" taregt="_blank" target="시간여행TV">
+      100억 개미가 알려주는 증권사 리포트 활용법</a><br>
+
+      <p>
+        DB금융투자, 하나금융을 추천.
+      </p>
+
     <a href="https://www.youtube.com/watch?v=2Nq1qzkaSn0" taregt="_blank" target="시간여행TV">
       주식으로 2년동안 100억 수익, 그 중 손절은 몇 종목??</a><br>
 
