--- a/Strategy_and_tactics.html
+++ b/Strategy_and_tactics.html
@@ -52,6 +52,9 @@
 
 
 
+    <a href="https://www.youtube.com/watch?v=R9HoxHNBT3Y" target="_blank" title="쉬운바둑">
+      [바둑][붙여막기정석] 이창호정석 한방에 공부하기</a><br>
+
     <a href="https://www.youtube.com/watch?v=WUR4sBjQPss" target="_blank" title="아구TV">
       [스타2] 스타크래프트2 강의 Part. 2 [테란 입문편]</a><br>
 
