--- a/The_economist.html
+++ b/The_economist.html
@@ -51,6 +51,9 @@
 
 
 
+  <a href="https://www.youtube.com/watch?v=Y_RWgir8vaU" target="_blank" title="책갈피">
+    빅데이터를 창업, 비즈니스에 활용해 돈버는법</a><br>
+
   <a href="https://www.youtube.com/watch?v=ZRdEvpm-FLk" target="_blank" title="슈카월드">
     "이 세상 주식이 아니다" 폭주하는 테슬라와 패닉에 빠진 공매도</a><br>
 
