--- a/Karazhan_library.html
+++ b/Karazhan_library.html
@@ -73,7 +73,8 @@
       [하멜표류기]-헨드릭 하멜
     <h3><strong>철학</h3></strong>
       [내 안의 나를 깨우는 장자 외편]-장자<br>
-      [그래서 철학이 필요해]-고바야시 쇼테이
+      [그래서 철학이 필요해]-고바야시 쇼테이<br>
+      [차라투스트라는 이렇게 말했다]-프리드리히 니체
     <h3><strong>심리학</h3></strong>
       [나도 아직 나를 모른다]-허지원<br>
       [죽기 전에 한 번은 심리학을 만나라]-서상원<br>
@@ -104,7 +105,7 @@
       <h2>2020년 2월 독서</h2>
         <li>경제/경영: [알아두면 쓸모 있는 IT 상식]-정철환</li>
         <li>역사:[하멜표류기]-헨드릭 하멜</li>
-        <li>철학:</li>
+        <li>철학:[차라투스트라는 이렇게 말했다]-프리드리히 니체</li>
         <li>심리학/처세술: [호감 가는 대화에는 8가지 절대법칙이 있다]-스쿤</li>
         <li>과학:</li>
         <br>
