--- a/Show_yourself.html
+++ b/Show_yourself.html
@@ -50,6 +50,10 @@
     <h1>Show Yourself</h1><br><br><br>
 
 
+
+    <a href="https://www.youtube.com/watch?v=n63xXHMUMa0" target="_blank" title="기억력매거진">
+      시각화 기억법 - 사진찍듯 기억하는 방법!</a><br>
+
     <a href="https://www.youtube.com/watch?v=W8dImvaJJv8" target="_blank" title="신사임당">
       부자가 될 사람인지 하루만에 알아내는 방법 (존리)</a><br>
 
