--- a/Strategy_and_tactics.html
+++ b/Strategy_and_tactics.html
@@ -51,6 +51,8 @@
 
 
 
+    <a href="https://www.youtube.com/watch?v=4rcXgpn2eoI" target="_blank" title="슈비이닝장기">
+      [장기]기초강좌 - 초반 묶인 병 공격법</a><br>
 
     <a href="https://www.youtube.com/watch?v=R9HoxHNBT3Y" target="_blank" title="쉬운바둑">
       [바둑][붙여막기정석] 이창호정석 한방에 공부하기</a><br>
