--- a/Stock_investment.html
+++ b/Stock_investment.html
@@ -51,6 +51,52 @@
 
 
 
+    <a href="https://www.youtube.com/watch?v=tZpdXOAcrxs&t=12s" taregt="_blank" target="시간여행TV">
+      주식 작전세력에 대해서 모든걸 알려드립니다.</a><br>
+
+      <p>
+        2013년 이전은 가짜뉴스
+        2013년 이후는 진짜 같은 가짜뉴스
+
+        최근
+        상승장악형(85%)
+        / 매도호가에 있는 물량을 세력이 매수로 긁으면서 올라가는 패턴
+        / 하루 거래량 500억 이상 터지면서 상승하는 종목/
+        / 과거의 남선알미늄, SDN, 남화토건, 남화산
+        / 1,1,1,1,1,1,1 (단주매매) - 종목에 불들오게 하기 위함, 불법, 처벌규정 없음
+        / 종가관리
+        / 세력은 물량을 팔아야 할 때 단일가를 싫어하고, 주가를 올려야 할 때 단일가를 좋아한다.
+
+
+
+        물량장악형(15%) -> 이미 오른 종목은 사는 게 아니다
+        / 본인이 직접 안올리는 경우
+        / 시장에 나올 수 있는 주식이 15% 정도로 얼마 없는 경우, 티 안나게 가격은 안올려가면서 하락장에서 호가만 받으면서 10% 매수
+        / 개미들이 알아서 상한가를 만듬
+        / 시간이 오래 걸리긴 해도 손해를 안봄
+        / 우선주, 스펙주에서 가능
+        / 탑승할 기회를 안주므로 절대 매수하면 안된다
+
+        100% 물량장악형 세력도 없고
+        100% 상승장악형 세력도 없고
+        80%-20%, 70%-30%
+
+        잡기술
+        1) 상상인증권
+        / 어느날 갑자기 주가가 10% 하락하면서 매도창구 1위가 상상인증권이라면 회사가 박살이 났다는 것
+        / 이걸 역이용해서 자기가 보유한 주식을 전부 다 상상인증권 계좌를 만들고 이체
+        / 어느날 오후 3시쯤 시장가 매도로 -10% 만들면 -25% 까지는 개미들이 만듬
+        2) 대주주가 자신의 주식 담보
+        / 주식담보 만기 하루 전날 A증권으로 이체, A증권에서 매도물량이 엄청 나옴
+        3) 블로그 종목 소개 후 창구 옮겨서 매도창구 1위로 만들고 하락 유도
+        4) 동부증권 계좌가 세력 계좌라는 것을 개미들이 아는 것을 역이용
+      </p>
+
+
+
+
+
+
     <a href="https://www.youtube.com/watch?v=28yPis20CaY" taregt="_blank" target="시간여행TV">
       100억 개미가 알려주는 증권사 리포트 활용법</a><br>
 
