--- a/Science_and_technology.html
+++ b/Science_and_technology.html
@@ -51,6 +51,10 @@
 
 
 
+
+    <a href="https://www.youtube.com/watch?v=HrOXAYY5ZLQ" target="_blank" title="에스오디">
+      "중력조차도 넘지 못하는 것이 있습니다." 과학의 신이었던 아인슈타인조차 인정했던 가장 인간다운 감성</a><br>
+
     <a href="https://www.youtube.com/watch?v=H9QmbjLZ-ro" target="_blank" title="에스오디">
       우주의 소름돋는 미스터리함, 끝에 닿을 수는 없지만 끝에 이를 수는 있다</a><br>
 
