--- a/Strategy_and_tactics.html
+++ b/Strategy_and_tactics.html
@@ -51,8 +51,11 @@
 
 
 
+    <a href="https://www.youtube.com/watch?v=Ounj0cLFBNM" target="_blank" title="아구TV">
+      [스타2] 스타크래프트2 강의 Part. 1 [인터페이스 & 단축키]</a><br>
+
     <a href="https://www.youtube.com/watch?v=4rcXgpn2eoI" target="_blank" title="슈비이닝장기">
-      [장기]기초강좌 - 초반 묶인 병 공격법</a><br>
+      [장기] 기초강좌 - 초반 묶인 병 공격법</a><br>
 
     <a href="https://www.youtube.com/watch?v=R9HoxHNBT3Y" target="_blank" title="쉬운바둑">
       [바둑][붙여막기정석] 이창호정석 한방에 공부하기</a><br>
@@ -61,7 +64,7 @@
       [스타2] 스타크래프트2 강의 Part. 2 [테란 입문편]</a><br>
 
     <a href="https://www.youtube.com/watch?v=WnhM3hQ-5oE" target="_blank" title="슈비이닝장기">
-      [장기]어느쪽 졸병을 열어야 할까?</a><br>
+      [장기] 어느쪽 졸병을 열어야 할까?</a><br>
 
       <p>
         차가 혼자서는 공격할 수 없다.
@@ -85,13 +88,13 @@
       </p>
 
     <a href="https://www.youtube.com/watch?v=HvnvKNZNQjw" target="_blank" title="알로직">
-      [스타2]초보들이 무조건 알아야 할 세 가지 기본기 강좌</a><br>
+      [스타2] 초보들이 무조건 알아야 할 세 가지 기본기 강좌</a><br>
 
     <a href="https://www.youtube.com/watch?v=z3a-IicE3ZA" target="_blank" title="바둑학원">
-      [장기]초반의 중요성!! 초반에 밀리면 완전 녹아용</a><br>
+      [장기] 초반의 중요성!! 초반에 밀리면 완전 녹아용</a><br>
 
     <a href="https://www.youtube.com/watch?v=gk6faxfO_xM" target="_blank" title="바둑학원">
-      [바둑]상대방 집을 줄이거나 나의 집을 최대한 늘리는 방법 #2</a><br><br>
+      [바둑] 상대방 집을 줄이거나 나의 집을 최대한 늘리는 방법 #2</a><br><br>
 
     <u><위기십결(圍棋十訣)’과 ‘위기오득(圍棋五得)></u><br>
 
