--- a/Stock_investment.html
+++ b/Stock_investment.html
@@ -51,6 +51,10 @@
 
 
 
+    <a href="https://www.youtube.com/watch?v=aPF9E6iGgSc" taregt="_blank" target="시간여행TV">
+      99% 개미투자자들은 모르는 HTS의 숨은 꿀 기능</a><br>
+
+
     <a href="https://www.youtube.com/watch?v=tZpdXOAcrxs&t=12s" taregt="_blank" target="시간여행TV">
       주식 작전세력에 대해서 모든걸 알려드립니다.</a><br>
 
