--- a/Karazhan_library.html
+++ b/Karazhan_library.html
@@ -64,7 +64,9 @@
       [전설로 떠나는 월가의 영웅]-피터 린치<br>
       [기업공시 완전 정복]-김수헌<br>
       [알아두면 쓸모 있는 IT 상식]-정철환<br>
-      [빅데이터, 사람을 읽다]-BC카드 빅데이터센터
+      [빅데이터, 사람을 읽다]-BC카드 빅데이터센터<br>
+      [영리한 베트남 투자]-최근환<br>
+      [재무제표 행간을 읽어라]-김대욱
 
     <h3><strong>역사</h3></strong>
       [거의 모든 IT의 역사]-정지훈<br>
@@ -113,6 +115,8 @@
         <li>경영: [채리티:워터]-스캇 해리슨</li>
         <li>소설: [데미안]-헤르만 헤세</li>
         <li>경제: [빅데이터, 사람을 읽다]-BC카드 빅데이터센터</li>
+        <li>경제: [영리한 베트남 투자]-최근환</li>
+        <li>경제: [재무제표 행간을 읽어라]-김대욱</li>
 
     </p></pre>
 
