--- a/Science_and_technology.html
+++ b/Science_and_technology.html
@@ -51,6 +51,8 @@
 
 
 
+    <a href="https://www.youtube.com/watch?v=YNCiQhXJzhs" target="_blank" title="에스오디">
+      스탠포드와 중국의 연구진들이 초강세를 보이는 혁신적인 신기술, 이것이 혁명입니다.</a><br>
 
     <a href="https://www.youtube.com/watch?v=HrOXAYY5ZLQ" target="_blank" title="에스오디">
       "중력조차도 넘지 못하는 것이 있습니다." 과학의 신이었던 아인슈타인조차 인정했던 가장 인간다운 감성</a><br>
