--- a/Show_yourself.html
+++ b/Show_yourself.html
@@ -52,6 +52,15 @@
 
 
 
+    <a href="https://www.youtube.com/watch?v=JeW7kNLizbA" target="_blank" title="Project스노우볼">
+      [닐 디그래스 타이슨] 정말로 어려운 일을 해내는 사람들의 마인드 셋</a><br>
+
+    <a href="https://www.youtube.com/watch?v=dGJya2dpjko" target="_blank" title="Project스노우볼">
+      [닐 디그래스 타이슨] 아는 것과 생각해 내는 힘의 차이</a><br>
+
+    <a href="https://www.youtube.com/watch?v=J9zWUEizOcY" target="_blank" title="책갈피">
+      무일푼 빈털터리에서 상위 0.1% 부자가 된 사람의 독서법 </a><br>
+
     <a href="https://www.youtube.com/watch?v=n63xXHMUMa0" target="_blank" title="기억력매거진">
       시각화 기억법 - 사진찍듯 기억하는 방법!</a><br>
 
