--- a/Stock_investment.html
+++ b/Stock_investment.html
@@ -51,6 +51,22 @@
 
 
 
+
+    <a href="https://www.youtube.com/watch?v=cCDA55MMu7s" taregt="_blank" target="시간여행TV">
+      [주택시장 안정화 방안] 12월 16일 부동산 대책 보고 가세요</a><br>
+
+    <a href="https://www.youtube.com/watch?v=yaJ0szRP_QQ" taregt="_blank" target="Bullish Bears">
+      Bullish vs Bearish and How to Trade in Either Market</a><br>
+
+    <a href="https://www.youtube.com/watch?v=MJEZOfiCw24" taregt="_blank" target="시간여행TV">
+      우량주/대형주 매매할때 꼭 알아야만 하는 내용들</a><br>
+
+      <p>
+        장기투자가 단순히 사놓고 오래 기다리는 걸 장기투자라고 하면 안되요.
+        장기투자를 할 때는 무조건 분할 매수를 해서 평단가를 낮춰야 되요.
+        자기의 기존 평단가보다 아래에서 계속 사는게 장기투자에요.
+      </p>
+
     <a href="https://www.youtube.com/watch?v=aPF9E6iGgSc" taregt="_blank" target="시간여행TV">
       99% 개미투자자들은 모르는 HTS의 숨은 꿀 기능</a><br>
 
