--- a/Strategy_and_tactics.html
+++ b/Strategy_and_tactics.html
@@ -51,6 +51,16 @@
 
 
 
+
+    <a href="https://www.youtube.com/watch?v=lU5RAtODJ7I" target="_blank" title="쉬운바둑">
+      [바둑][이창호정석] 바로 끊으면? 커제와 같은 심정이..</a><br>
+
+    <a href="https://www.youtube.com/watch?v=gcnV4SweJJg" target="_blank" title="슈비이닝장기">
+      [장기] 기초강좌 - 초반 묶인 병 공격법 변화도-1</a><br>
+
+    <a href="https://www.youtube.com/watch?v=NhyOGtGO1zM" target="_blank" title="쉬운바둑">
+      [바둑] 바둑의 탄생. 바둑의 역사</a><br>
+
     <a href="https://www.youtube.com/watch?v=Ounj0cLFBNM" target="_blank" title="아구TV">
       [스타2] 스타크래프트2 강의 Part. 1 [인터페이스 & 단축키]</a><br>
 
