--- a/The_economist.html
+++ b/The_economist.html
@@ -51,6 +51,32 @@
 
 
 
+
+
+
+  <a href="https://www.youtube.com/watch?v=cZi3kLFG7Xo" target="_blank" title="더나은삶TV">
+    경제 흐름을 보는 가장 쉽고 직관적인 방법</a><br>
+
+    <p>
+      레이달리오 템플릿의 3가지 교훈<br>
+      1. 부채가 소득보다 빠르게 증가하면 안된다.<br>
+      2. 소득증가가 생산성 증가보다 빠르면 안된다.<br>
+      3. 가능한 모든 방법으로 생산성을 높여야 한다.<br>
+    </p>
+
+  <a href="https://en.wikipedia.org/wiki/David_Tepper" target="_blank" title="David Tepper">
+    David Tepper</a><br>
+
+    <p>
+      In 2001 he generated a 61% return by focusing on distressed bonds, and in the fourth quarter of 2005 he pursued what he saw as better opportunities in Standard & Poor's 500 stocks.[11] Tepper “keeps the market on edge” [12] and makes significant gains year after year by investing in the “diciest of companies,” such as MCI and Mirant. Investments in Conseco and Marconi also led to huge hedge fund profits for the company.
+    </p>
+    <p>
+      In a 2010 speech he recommended several supposedly risky investments, including AIG debt, Bank of America equity, and European banks. Citing experts who predicted hyperinflation or depression and deflation, he argued neither would happen: “The point is, markets adapt, people adapt. Don’t listen to all the crap out there.”
+    </p>
+    <p>
+      In 2009, Tepper's hedge-fund earned about $7 billion by buying distressed financial stocks in February and March (including Bank of America common stock at $3 per share), and then profiting from their recovery that year.[13] A total of $4 billion of those profits went to Tepper's personal wealth, making him the top-earning hedge fund manager of 2009 according to The New York Times.
+    </p>
+
   <a href="https://www.youtube.com/watch?v=Y_RWgir8vaU" target="_blank" title="책갈피">
     빅데이터를 창업, 비즈니스에 활용해 돈버는법</a><br>
 
