--- a/Strategy_and_tactics.html
+++ b/Strategy_and_tactics.html
@@ -52,6 +52,9 @@
 
 
 
+    <a href="https://www.youtube.com/watch?v=_oEqnO7ryHo" target="_blank" title="쉬운바둑">
+      바둑, 중국에서 만든게 아니라고?! (바둑이야기 #2)</a><br>
+
     <a href="https://www.youtube.com/watch?v=lU5RAtODJ7I" target="_blank" title="쉬운바둑">
       [바둑][이창호정석] 바로 끊으면? 커제와 같은 심정이..</a><br>
 
