--- a/Show_yourself.html
+++ b/Show_yourself.html
@@ -52,6 +52,9 @@
 
 
 
+    <a href="https://www.youtube.com/watch?v=wGr-A6SsQek" target="_blank" title="책갈피">
+      뇌를 변화, 성장시키고 리부팅하는 방법</a><br>
+
     <a href="https://www.youtube.com/watch?v=JeW7kNLizbA" target="_blank" title="Project스노우볼">
       [닐 디그래스 타이슨] 정말로 어려운 일을 해내는 사람들의 마인드 셋</a><br>
 
