--- a/Strategy_and_tactics.html
+++ b/Strategy_and_tactics.html
@@ -52,6 +52,9 @@
 
 
 
+    <a href="https://www.youtube.com/watch?v=pGjVUz7WudE" target="_blank" title="슈비이닝장기">
+      [장기] 기초강좌 - 초반 묶인 병 공격법 변화도-2</a><br>
+
     <a href="https://www.youtube.com/watch?v=_oEqnO7ryHo" target="_blank" title="쉬운바둑">
       바둑, 중국에서 만든게 아니라고?! (바둑이야기 #2)</a><br>
 
