--- a/Game_industry_trends.html
+++ b/Game_industry_trends.html
@@ -51,6 +51,24 @@
 
 
 
+    <a href="https://www.youtube.com/watch?v=JX0_yp-SJxQ" target="_blank" title="집마 홀릭TV">
+      갓 오브 워 4편(최종화) 스토리 정리</a><br>
+
+    <a href="https://www.youtube.com/watch?v=piTQxZTeTHw" target="_blank" title="집마 홀릭TV">
+      갓 오브 워 4편(2부) 스토리 정리</a><br>
+
+    <a href="https://www.youtube.com/watch?v=JoLT2yDGfQ8" target="_blank" title="집마 홀릭TV">
+      북유럽 최고신 오딘에게 맞선 남자 - 갓 오브 워 4편(1부) 스토리 정리</a><br>
+
+    <a href="https://www.youtube.com/watch?v=rPrVe-GDJ9U" target="_blank" title="집마 홀릭TV">
+      이 남자를 빡치게 하면 벌어지는 일 - 갓 오브 워 3편 스토리 정리</a><br>
+
+    <a href="https://www.youtube.com/watch?v=pPbyrN6dHKA" target="_blank" title="집마 홀릭TV">
+      인간이 신이 되면 벌어지는 일 - 갓 오브 워 2편 스토리 정리</a><br>
+
+    <a href="https://www.youtube.com/watch?v=_51l2Y8HwTc" target="_blank" title="집마 홀릭TV">
+      인간의 몸으로 신에게 맞선 남자 - 갓 오브 워 1편 스토리 정리</a><br>
+
     <a href="https://www.youtube.com/watch?v=FGXRVk_d0QI" target="_blank" title="디스이즈게임">
       워크래프트3 리포지드 논란이 암시하는 진짜 위험</a><br>
 
