--- a/Science_and_technology.html
+++ b/Science_and_technology.html
@@ -51,6 +51,15 @@
 
 
 
+    <a href="https://www.youtube.com/watch?v=wn9jrpdxS6o" target="_blank" title="에스오디">
+      당신이 지금까지 본 적 없는 새로운 반도체! 대한민국이 다시금 격차를 벌리다!</a><br>
+
+    <a href="https://www.youtube.com/watch?v=O9UmjWZL3KQ" target="_blank" title="동빈나">
+      딥 페이크(Deepfakes) 최신 연구 동향 - 가짜 영상 제작과 탐지 기술 정리</a><br>
+
+    <a href="https://www.youtube.com/watch?v=TbBGp_Mpl2o" target="_blank" title="SURPRISER">
+      제노봇(Xenobot) - 기계인가? 생명인가?</a><br>
+
     <a href="https://www.youtube.com/watch?v=hsj5g5B5enM" target="_blank" title="에스오디">
       순간이동이 실제로 가능할까? 30년전, 순간이동의 단서가 발견되다!</a><br>
 
