--- a/Show_yourself.html
+++ b/Show_yourself.html
@@ -51,6 +51,11 @@
 
 
 
+    <a href="https://www.youtube.com/watch?v=kqnl17SbbPw" target="_blank" title="STUDYCODE">
+      '미래의 유망직업'을 예측해봅니다</a><br>
+
+    <a href="https://www.youtube.com/watch?v=rNvlCFlZjRI" target="_blank" title="잭스파이어">
+      부자가 되고 싶다면 봐야할 동기부여 영상|일론 머스크</a><br>
 
     <a href="https://www.youtube.com/watch?v=wGr-A6SsQek" target="_blank" title="책갈피">
       뇌를 변화, 성장시키고 리부팅하는 방법</a><br>
