--- a/Stock_investment.html
+++ b/Stock_investment.html
@@ -51,6 +51,11 @@
 
 
 
+    <a href="https://www.youtube.com/watch?v=LsPmYE76xjA" taregt="_blank" target="EngineerTV">
+      Battery Industry Investment Guide</a><br>
+
+    <a href="https://www.youtube.com/watch?v=vFUAJAffPiI" taregt="_blank" target="더나은삶TV">
+      재무제표의 행간을 읽고 주식투자를 위한 기업분석 하는법</a><br>
 
     <a href="https://www.youtube.com/watch?v=cCDA55MMu7s" taregt="_blank" target="시간여행TV">
       [주택시장 안정화 방안] 12월 16일 부동산 대책 보고 가세요</a><br>
