--- a/The_economist.html
+++ b/The_economist.html
@@ -52,6 +52,24 @@
 
 
 
+  <a href="https://www.youtube.com/watch?v=Npd6d_-oTPo" target="_blank" title="슈카월드">
+    Great2020! 다시 도전하는 CJ와 동남아시아 택배 시장에 승부하는 CJ대한통운</a><br>
+
+  <a href="https://www.youtube.com/watch?v=mzpe1xeXBMI" target="_blank" title="더나은삶TV">
+    선전선동 당하려면 몰라도 되는 정치성향 구분법</a><br>
+
+  <a href="https://www.youtube.com/watch?v=ROrNPlDz6ls" target="_blank" title="더나은삶TV">
+    잘나가던 중국이 망할 수 밖에 없는 이유</a><br>
+
+  <a href="https://www.youtube.com/watch?v=hs5wTdjpOuQ" target="_blank" title="더나은삶TV">
+    실리콘밸리의 진짜 실력자 '피터틸'이 떼돈을 번 비법</a><br>
+
+  <a href="https://www.youtube.com/watch?v=5QyVPZ305A0" target="_blank" title="더나은삶TV">
+    북한이 정말 비핵화를 원하고 경제를 선택할 것인가?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=V24kTm56cKY&list=WL" target="_blank" title="더나은삶TV">
+    미국이 갑자기 자유무역체제를 거부하려는 진짜 이유</a><br>
+
   <a href="https://www.youtube.com/watch?v=ZbRZUl2qG-A" target="_blank" title="더나은삶TV">
     돈 무제한 풀어도 된다는 충격적인 경제이론</a><br>
 
