--- a/Karazhan_library.html
+++ b/Karazhan_library.html
@@ -66,13 +66,15 @@
       [알아두면 쓸모 있는 IT 상식]-정철환<br>
       [빅데이터, 사람을 읽다]-BC카드 빅데이터센터<br>
       [영리한 베트남 투자]-최근환<br>
-      [재무제표 행간을 읽어라]-김대욱
+      [재무제표 행간을 읽어라]-김대욱<br>
+      [내일의 부: 알파편]-조던 김상섭
 
     <h3><strong>역사</h3></strong>
       [거의 모든 IT의 역사]-정지훈<br>
       [약자를 위한 현실주의]-이주희<br>
       [알렉산드로스 제국의 눈물]-제임스 롬<br>
-      [하멜표류기]-헨드릭 하멜
+      [하멜표류기]-헨드릭 하멜<br>
+      [하룻밤에 읽는 한국 근현대사]-최용범
     <h3><strong>철학</h3></strong>
       [내 안의 나를 깨우는 장자 외편]-장자<br>
       [그래서 철학이 필요해]-고바야시 쇼테이<br>
@@ -117,6 +119,8 @@
         <li>경제: [빅데이터, 사람을 읽다]-BC카드 빅데이터센터</li>
         <li>경제: [영리한 베트남 투자]-최근환</li>
         <li>경제: [재무제표 행간을 읽어라]-김대욱</li>
+        <li>역사: [하룻밤에 읽는 한국 근현대사]-최용범</li>
+        <li>경제: [내일의 부: 알파편]-조던 김상섭<li>
 
     </p></pre>
 
