--- a/Karazhan_library.html
+++ b/Karazhan_library.html
@@ -67,7 +67,8 @@
       [빅데이터, 사람을 읽다]-BC카드 빅데이터센터<br>
       [영리한 베트남 투자]-최근환<br>
       [재무제표 행간을 읽어라]-김대욱<br>
-      [내일의 부: 알파편]-조던 김상섭
+      [내일의 부: 알파편]-조던 김상섭<br>
+      [내일의 부: 오메가편]-조던 김상섭
 
     <h3><strong>역사</h3></strong>
       [거의 모든 IT의 역사]-정지훈<br>
@@ -105,11 +106,21 @@
     </p></pre>
 
 
+
+    <p><pre>
+      <h2>2020년 3월 독서</h2>
+        <li>경제/경영: [내일의 부: 오메가편]-조던 김상섭</li>
+        <li>역사:</li>
+        <li>철학:</li>
+        <li>심리학/처세술:</li>
+        <li>과학:</li>
+
+
     <p><pre>
       <h2>2020년 2월 독서</h2>
         <li>경제/경영: [알아두면 쓸모 있는 IT 상식]-정철환</li>
-        <li>역사:[하멜표류기]-헨드릭 하멜</li>
-        <li>철학:[차라투스트라는 이렇게 말했다]-프리드리히 니체</li>
+        <li>역사: [하멜표류기]-헨드릭 하멜</li>
+        <li>철학: [차라투스트라는 이렇게 말했다]-프리드리히 니체</li>
         <li>심리학/처세술: [호감 가는 대화에는 8가지 절대법칙이 있다]-스쿤</li>
         <li>과학:</li>
         <br>
