--- a/Science_and_technology.html
+++ b/Science_and_technology.html
@@ -51,6 +51,9 @@
 
 
 
+    <a href="https://www.youtube.com/watch?v=NYD-JPLRY7k" target="_blank" title="에스오디">
+      The moment of chemical bond breaking and forming!</a><br>
+
     <a href="https://www.youtube.com/watch?v=wn9jrpdxS6o" target="_blank" title="에스오디">
       당신이 지금까지 본 적 없는 새로운 반도체! 대한민국이 다시금 격차를 벌리다!</a><br>
 
