--- a/The_economist.html
+++ b/The_economist.html
@@ -51,6 +51,14 @@
 
 
 
+  <a href="https://www.youtube.com/watch?v=LWcqyFMQPNs" target="_blank" title="더나은삶TV">
+    미중 전쟁 가능성 생각보다 가까이 있다?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=LRD4mOyrNPM" target="_blank" title="자유잍튜브THE">
+    (1편) 35년 만에 버블이 다가오고 있다</a><br>
+
+  <a href="https://www.youtube.com/watch?v=pdXvChUl67s" target="_blank" title="더나은삶TV">
+    에너지패권에서 밀리자 막장 에너지 정책을 시행하는 중국</a><br>
 
   <a href="https://www.youtube.com/watch?v=Npd6d_-oTPo" target="_blank" title="슈카월드">
     Great2020! 다시 도전하는 CJ와 동남아시아 택배 시장에 승부하는 CJ대한통운</a><br>
