--- a/Karazhan_library.html
+++ b/Karazhan_library.html
@@ -75,7 +75,8 @@
       [약자를 위한 현실주의]-이주희<br>
       [알렉산드로스 제국의 눈물]-제임스 롬<br>
       [하멜표류기]-헨드릭 하멜<br>
-      [하룻밤에 읽는 한국 근현대사]-최용범
+      [하룻밤에 읽는 한국 근현대사]-최용범<br>
+      [세상에서 가장 쉬운 세계사]-천레이
     <h3><strong>철학</h3></strong>
       [내 안의 나를 깨우는 장자 외편]-장자<br>
       [그래서 철학이 필요해]-고바야시 쇼테이<br>
@@ -110,7 +111,7 @@
     <p><pre>
       <h2>2020년 3월 독서</h2>
         <li>경제/경영: [내일의 부: 오메가편]-조던 김상섭</li>
-        <li>역사:</li>
+        <li>역사: [세상에서 가장 쉬운 세계사]-천레이</li>
         <li>철학:</li>
         <li>심리학/처세술:</li>
         <li>과학:</li>
