--- a/Stock_investment.html
+++ b/Stock_investment.html
@@ -51,6 +51,43 @@
 
 
 
+    <a href="https://www.youtube.com/watch?v=1XNlOwn5S4E" target="_blank" title="ClayTrader Video Charts">
+      How Charts Actually Work</a><br>
+
+    <a href="https://www.youtube.com/watch?v=6-YqxmNSRH4" target="_blank" title="ClayTrader Video Charts">
+      My Online Trade Platform Explained</a><br>
+
+    <a href="https://www.youtube.com/watch?v=F-PZro2Ci_0" target="_blank" title="ClayTrader Video Charts">
+      The Meet Group, Inc. - MEET Stock Chart Technical Analysis for 03-04-2020</a><br>
+
+    <a href="https://www.youtube.com/watch?v=Zfjlf2TfwfI" target="_blank" title="ClayTrader Video Charts">
+      Pacific Biosciences of California, Inc. - PACB Stock Chart Technical Analysis for 03-04-2020</a><br>
+
+    <a href="https://www.youtube.com/watch?v=-7p-aeA-YLg" target="_blank" title="ClayTrader Video Charts">
+      xin Limited - UXIN Stock Chart Technical Analysis for 03-04-2020</a><br>
+
+    <a href="https://www.youtube.com/watch?v=2nkcnu-h3zQ" target="_blank" title="ClayTrader Video Charts">
+      Tocagen Inc. - TOCA Stock Chart Technical Analysis for 03-04-2020</a><br>
+
+    <a href="https://www.youtube.com/watch?v=uDoZgFf6D2A" target="_blank" title="Investor's Business Daily">
+      Chart Patterns: Flat Base</a><br>
+
+    <a href="https://www.youtube.com/watch?v=Pwi6292Wlkc" target="_blank" title="Capital.com">
+      What is a bid-ask spread?</a><br>
+
+    <a href="https://www.youtube.com/watch?v=OUswxUrqYu0" target="_blank" title="Capital.com">
+      What is leverage?</a><br>
+
+    <a href="https://www.youtube.com/watch?v=aF0CH1OxivA" target="_blank" title="Capital.com">
+      What is a commodity?</a><br>
+
+    <a href="https://www.youtube.com/watch?v=SaGmRqL-B2c" target="_blank" title="Capital.com">
+      What is liquidity?</a><br>
+
+    <a href="https://www.youtube.com/watch?v=nLFylD85GpI" target="_blank" title="Capital.com">
+      New drawing functionality: introduction</a><br>
+
+
     <a href="https://www.youtube.com/watch?v=LsPmYE76xjA" taregt="_blank" target="EngineerTV">
       Battery Industry Investment Guide</a><br>
 
