--- a/Strategy_and_tactics.html
+++ b/Strategy_and_tactics.html
@@ -51,6 +51,11 @@
 
 
 
+    <a href="https://www.youtube.com/watch?v=l1nNyYaRZ14" target="_blank" title="쉬운바둑">
+      백돌을 수습하는 방법은 무엇일까요?</a><br>
+
+    <a href="https://www.youtube.com/watch?v=LcFY0K6kwqI" target="_blank" title="쉬운바둑">
+      많이 당했쟈나~ 이제부터 내가쓴다! 겁나게 강력한 함정수</a><br>
 
     <a href="https://www.youtube.com/watch?v=pGjVUz7WudE" target="_blank" title="슈비이닝장기">
       [장기] 기초강좌 - 초반 묶인 병 공격법 변화도-2</a><br>
