--- a/Karazhan_library.html
+++ b/Karazhan_library.html
@@ -44,6 +44,7 @@
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Merriam_Webster's.html" class="inactive">Merriam Webster's</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><font size="4"><a href="夫學須靜也_才須學也.html" class="inactive">夫學須靜也 才須學也</a></font></li>
   </ul>
+
   <div id="contents">
     <img src="Karazhan_library.jpg" width="100%">
 
@@ -104,6 +105,8 @@
       [기획자의 습관]-최장순
     <h3><strong>에세이</h3></strong>
       [이창호의 부득탐승]-이창호
+    <h3><strong>사회학</h3></strong>
+      [재미란 무엇인가?]-벤 핀첨
     </p></pre>
 
 
@@ -115,7 +118,9 @@
         <li>철학:</li>
         <li>심리학/처세술:</li>
         <li>과학:</li>
-
+        <br>
+        <li>사회학: [재미란 무엇인가?]-벤 핀첨</li>
+    </p></pre>
 
     <p><pre>
       <h2>2020년 2월 독서</h2>
