--- a/Show_yourself.html
+++ b/Show_yourself.html
@@ -51,6 +51,9 @@
 
 
 
+    <a href="https://www.youtube.com/watch?v=bA6ywy8WMbc" target="_blank" title="책그림">
+      당신 안의 최악의 적, 에고 (feat. 에고라는 적)</a><br>
+
     <a href="https://www.youtube.com/watch?v=kqnl17SbbPw" target="_blank" title="STUDYCODE">
       '미래의 유망직업'을 예측해봅니다</a><br>
 
