--- a/Stock_investment.html
+++ b/Stock_investment.html
@@ -51,7 +51,34 @@
 
 
 
-    <a href="https://www.youtube.com/watch?v=1XNlOwn5S4E" target="_blank" title="ClayTrader Video Charts">
+    <a href="https://www.youtube.com/watch?v=y_v0LQF4tks" target="_blank" title="ClayTrader">
+      Stock Market Training: How Much Money Do I Need To Trade Stocks / Options?</a><br>
+
+    <a href="https://www.youtube.com/watch?v=E3TCFTtUIZ4" target="_blank" title="ClayTrader">
+      The Best Tool For Traders</a><br>
+
+    <a href="https://www.youtube.com/watch?v=s5eJsUDEms4" target="_blank" title="ClayTrader">
+      Stock Market Battle: Day Trading vs. Investing (who wins?)</a><br>
+
+    <a href="https://www.youtube.com/watch?v=dR3MjbD6V1k" target="_blank" title="ClayTrader">
+      Trading 101: What is "Shorting" / "Going Short"?</a><br>
+
+    <a href="https://www.youtube.com/watch?v=SV0WbSRZjuM" target="_blank" title="ClayTrader">
+      Stock Market Plunges | How I Capitalized and Made Money</a><br>
+
+    <a href="https://www.youtube.com/watch?v=nNLod9H6uhQ" target="_blank" title="ClayTrader">
+      Trading 101: How Does a Stock Make You Money?</a><br>
+
+    <a href="https://www.youtube.com/watch?v=DF23jO8Y0n0" target="_blank" title="ClayTrader">
+      Trading 101: How to Buy Stocks</a><br>
+
+    <a href="https://www.youtube.com/watch?v=SS4hdirNl4I" target="_blank" title="ClayTrader">
+      Trading 101: What Makes A Stock Price Change?</a><br>
+
+    <a href="https://www.youtube.com/watch?v=D0Da-1Af6tw" target="_blank" title="ClayTrader">
+      Why I Started Using This Day Trading Indicator (the best!)</a><br>
+
+    <a href="https://www.youtube.com/watch?v=1XNlOwn5S4E" target="_blank" title="ClayTrader">
       How Charts Actually Work</a><br>
 
     <a href="https://www.youtube.com/watch?v=6-YqxmNSRH4" target="_blank" title="ClayTrader Video Charts">
