--- a/Strategy_and_tactics.html
+++ b/Strategy_and_tactics.html
@@ -51,6 +51,18 @@
 
 
 
+    <a href="https://www.youtube.com/watch?v=AVyVh41yESw" target="_blank" title="쉬운바둑">
+      화점정석 #1</a><br>
+
+    <a href="https://www.youtube.com/watch?v=Qcat31Ga0pk" target="_blank" title="쉬운바둑">
+      [정석선택] 상황에 맞게 자~알 고르세요</a><br>
+
+    <a href="https://www.youtube.com/watch?v=h3IbDKMv2S0" target="_blank" title="쉬운바둑">
+      화점정석 이후, 흑백 최선의 결과는?(두칸높은협공)</a><br>
+
+    <a href="https://www.youtube.com/watch?v=RGSH92DnrKo" target="_blank" title="쉬운바둑">
+      눈목자 굳힘에서 흑의 세력을 부수는 백의 밑붙임</a><br>
+
     <a href="https://www.youtube.com/watch?v=l1nNyYaRZ14" target="_blank" title="쉬운바둑">
       백돌을 수습하는 방법은 무엇일까요?</a><br>
 
