--- a/The_economist.html
+++ b/The_economist.html
@@ -51,6 +51,15 @@
 
 
 
+  <a href="https://www.youtube.com/watch?v=XEslS14Obmo" target="_blank" title="자유잍튜브THE">
+    무역전쟁과 4차산업혁명이 만드는 부의 기회</a><br>
+
+  <a href="https://www.youtube.com/watch?v=ATBTGiIOZkA" target="_blank" title="NEO지식창고">
+    샤오미 쇼크!! 중국 경제위기의 시작인가?(2019)</a><br>
+
+  <a href="https://www.youtube.com/watch?v=c2xn_r89B4Y" target="_blank" title="SBSCNBC뉴스">
+    워렌 버핏 "주가 예상하지 마라…너는 못한다"</a><br>
+
   <a href="https://www.youtube.com/watch?v=LWcqyFMQPNs" target="_blank" title="더나은삶TV">
     미중 전쟁 가능성 생각보다 가까이 있다?</a><br>
 
