--- a/Show_yourself.html
+++ b/Show_yourself.html
@@ -51,6 +51,10 @@
 
 
 
+
+    <a href="https://www.youtube.com/watch?v=60cvryTrgTk" target="_blank" title="더나은삶TV">
+      남이 평생 쌓은 지혜를 한순간에 훔치는 방법</a><br>
+
     <a href="https://www.youtube.com/watch?v=bA6ywy8WMbc" target="_blank" title="책그림">
       당신 안의 최악의 적, 에고 (feat. 에고라는 적)</a><br>
 
