--- a/Stock_investment.html
+++ b/Stock_investment.html
@@ -51,6 +51,13 @@
 
 
 
+
+    <a href="https://www.youtube.com/watch?v=oelFn7E0fqY" target="_blank" title="슈카월드">
+      '양적 완화'란 무엇인가? 우리가 해야할 일은?</a><br>
+
+    <a href="https://www.youtube.com/watch?v=LUFBU5SAy2I" target="_blank" title="ClayTrader">
+      Stock Market Coronavirus Crash: How Day Traders Make Money</a><br>
+
     <a href="https://www.youtube.com/watch?v=y_v0LQF4tks" target="_blank" title="ClayTrader">
       Stock Market Training: How Much Money Do I Need To Trade Stocks / Options?</a><br>
 
