--- a/Strategy_and_tactics.html
+++ b/Strategy_and_tactics.html
@@ -51,6 +51,10 @@
 
 
 
+
+    <a href="https://www.youtube.com/watch?v=x1oFC9FpcNM" target="_blank" title="쉬운바둑">
+      화점정석 #2</a><br>
+
     <a href="https://www.youtube.com/watch?v=AVyVh41yESw" target="_blank" title="쉬운바둑">
       화점정석 #1</a><br>
 
