--- a/The_economist.html
+++ b/The_economist.html
@@ -51,6 +51,13 @@
 
 
 
+
+  <a href="https://www.youtube.com/watch?v=n65UOPGmMtQ" target="_blank" title="삼프로TV_경제의신과함께">
+    미국 연준이 가진 숨겨진 필살기, 양적완화 역대급 정리</a><br>
+
+  <a href="https://www.youtube.com/watch?v=WYee7MYuTaY" target="_blank" title="소소하게크게">
+    워렌버핏도 40조원 손실, 레이달리오의 해법 제시</a><br>
+
   <a href="https://www.youtube.com/watch?v=XEslS14Obmo" target="_blank" title="자유잍튜브THE">
     무역전쟁과 4차산업혁명이 만드는 부의 기회</a><br>
 
