--- a/AI_industry_trends.html
+++ b/AI_industry_trends.html
@@ -52,6 +52,11 @@
 
 
 
+
+
+    <a href="https://www.youtube.com/watch?v=iPZFKUC1fOM" target="_blank" title="더나은삶TV">
+      노동의 시대가 끝난다고?! 지금껏 겪어보지 못한 세상이 열리는 이유!!</a><br>
+
     <a href="https://www.youtube.com/watch?v=hS4d3xAZgCg" target="_blank" title="조코딩">
       이제 개발자도 실직 위기? 충격적인 5가지 최신 인공지능 기술을 소개합니다</a><br>
 
