--- a/Karazhan_library.html
+++ b/Karazhan_library.html
@@ -81,7 +81,8 @@
     <h3><strong>철학</h3></strong>
       [내 안의 나를 깨우는 장자 외편]-장자<br>
       [그래서 철학이 필요해]-고바야시 쇼테이<br>
-      [차라투스트라는 이렇게 말했다]-프리드리히 니체
+      [차라투스트라는 이렇게 말했다]-프리드리히 니체<br>
+      [인간과 좀비의 목숨을 건 철학수업]-사쿠라 츠요시
     <h3><strong>심리학</h3></strong>
       [나도 아직 나를 모른다]-허지원<br>
       [죽기 전에 한 번은 심리학을 만나라]-서상원<br>
@@ -95,7 +96,8 @@
       [기억은 미래로 향한다]-한나 모니어, 마르틴 게스만
     <h3><strong>경영</h3></strong>
       [적벽대전, 이길 수 밖에 없는 제갈량의 전략 기획서]-나단<br>
-      [채리티:워터]-스캇 해리슨
+      [채리티:워터]-스캇 해리슨<br>
+      [반대의 놀라운 힘]-샬런 네메스
     <h3><strong>소설</h3></strong>
       [82년생 김지영]-조남주<br>
       [잠]-베르나르 베르베르<br>
@@ -115,11 +117,12 @@
       <h2>2020년 3월 독서</h2>
         <li>경제/경영: [내일의 부: 오메가편]-조던 김상섭</li>
         <li>역사: [세상에서 가장 쉬운 세계사]-천레이</li>
-        <li>철학:</li>
+        <li>철학: [인간과 좀비의 목숨을 건 철학수업]-사쿠라 츠요시</li>
         <li>심리학/처세술:</li>
         <li>과학:</li>
         <br>
         <li>사회학: [재미란 무엇인가?]-벤 핀첨</li>
+        <li>경영: [반대의 놀라운 힘]-샬런 네메스</li>
     </p></pre>
 
     <p><pre>
