--- a/Strategy_and_tactics.html
+++ b/Strategy_and_tactics.html
@@ -52,6 +52,19 @@
 
 
 
+
+    <a href="https://www.youtube.com/watch?v=hCq6n1I9pdY" target="_blank" title="쉬운바둑">
+      화점정석 #5</a><br>
+
+    <a href="https://www.youtube.com/watch?v=hCq6n1I9pdY" target="_blank" title="쉬운바둑">
+      화점정석 #4</a><br>
+
+    <a href="https://www.youtube.com/watch?v=xxHAijxolwA" target="_blank" title="쉬운바둑">
+      [양걸침]대응하는 방법</a><br>
+
+    <a href="https://www.youtube.com/watch?v=cuUSQ8wvdNM" target="_blank" title="쉬운바둑">
+      화점정석 #3</a><br>
+
     <a href="https://www.youtube.com/watch?v=x1oFC9FpcNM" target="_blank" title="쉬운바둑">
       화점정석 #2</a><br>
 
