--- a/Stock_investment.html
+++ b/Stock_investment.html
@@ -52,8 +52,24 @@
 
 
 
-    <a href="https://www.youtube.com/watch?v=oelFn7E0fqY" target="_blank" title="슈카월드">
-      '양적 완화'란 무엇인가? 우리가 해야할 일은?</a><br>
+
+    <a href="https://www.youtube.com/watch?v=U5vnEGdIAVY" target="_blank" title="ClayTrader">
+      How to (Safely) Practice Trading Stocks Using Real Money</a><br>
+
+    <a href="https://www.youtube.com/watch?v=kFtr50Dp3pA" target="_blank" title="UKspreadbetting">
+      How to Trade a Bearish Flag Pattern like a Pro</a><br>
+
+    <a href="https://www.youtube.com/watch?v=Sch9cXNi-hg" target="_blank" title="UKspreadbetting">
+      How to Trade Bullish Flag Patterns like a Pro</a><br>
+
+    <a href="https://www.youtube.com/watch?v=KuheIquENgk" target="_blank" title="UKspreadbetting">
+      How to Spot the Bull Flag Continuation Pattern</a><br>
+
+    <a href="https://www.youtube.com/watch?v=qMAtgfMEpA4" target="_blank" title="UKspreadbetting">
+      4 Continuation Chart Patterns You Should Know</a><br>
+
+    <a href="https://www.youtube.com/watch?v=reyP3SuSveg" target="_blank" title="ClayTrader">
+      Day Trading For Beginners: Understanding "Actual" Risk</a><br>
 
     <a href="https://www.youtube.com/watch?v=LUFBU5SAy2I" target="_blank" title="ClayTrader">
       Stock Market Coronavirus Crash: How Day Traders Make Money</a><br>
