--- a/The_economist.html
+++ b/The_economist.html
@@ -52,6 +52,58 @@
 
 
 
+
+  <a href="https://www.youtube.com/watch?v=PS85r2CDcHE" target="_blank" title="삼프로TV_경제의신과함께">
+    누구도 예측 못한 주가하락, 끝은 어디에? (김한진 박사)</a><br>
+
+  <a href="https://www.youtube.com/watch?v=2OYllf3xre0" target="_blank" title="삼프로TV_경제의신과함께">
+    급변하는 장세속 반도체 시장의 방향은 f.이주완</a><br>
+
+  <a href="https://www.youtube.com/watch?v=gIsn_oqoZBk" target="_blank" title="더나은삶TV">
+    유가 폭락으로 셰일가스발 경제대공황이 온다?! 그들이 아픈데 또 때린 이유</a><br>
+
+  <a href="https://www.youtube.com/watch?v=4JFehtO-otw" target="_blank" title="내일은 투자왕 - 김단테">
+    레이달리오. 코로나로 인해 투자의 패러다임이 바뀌었음을 선언하다</a><br>
+
+  <a href="https://www.youtube.com/watch?v=0_jrN6LBY0s" target="_blank" title="내일은 투자왕 - 김단테">
+    뉴욕증시에 23년 만에 찾아온 서킷브레이커, 워렌버핏은 어떻게 생각할까?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=30kuqqyJoyU" target="_blank" title="내일은 투자왕 - 김단테">
+    2020년과 닮은 1974년의 교훈! 레이달리오는 이렇게 말했다</a><br>
+
+  <a href="https://www.youtube.com/watch?v=Iha_F-JKdyI" target="_blank" title="삼프로TV_경제의신과함께">
+    중앙은행 통화정책은 끝?, 현금을 보유하는 이유</a><br>
+
+  <a href="https://www.youtube.com/watch?v=cZOYdjuQVH4" target="_blank" title="삼프로TV_경제의신과함께">
+    외국인, 열흘간 삼성전자 3조6천억 팔아</a><br>
+
+  <a href="https://www.youtube.com/watch?v=ukXlwpwFIvA" target="_blank" title="더나은삶TV">
+    소상공인 돕는다면서 건물주만 개이득보는 "착한 임대인 운동" </a><br>
+
+  <a href="https://www.youtube.com/watch?v=DJ6n5Tx8EiQ" target="_blank" title="삼프로TV_경제의신과함께">
+    2008년이 금융위기라면 2020년은 경제적 약자의 위기 (김학균)</a><br>
+
+  <a href="https://www.youtube.com/watch?v=wgqswSF2Xbo" target="_blank" title="삼프로TV_경제의신과함께">
+    뉴욕증시 팬데믹 공포에 11-12% 대폭락</a><br>
+
+  <a href="https://www.youtube.com/watch?v=2OMX4Yk6m6o" target="_blank" title="삼프로TV_경제의신과함께">
+    기간대비 하락폭 최대, 초유의 상황</a><br>
+
+  <a href="https://www.youtube.com/watch?v=1sq5_1kCXag" target="_blank" title="책그림">
+    부는 어떻게 축적되는가 | 10분 만에 자본주의 이해하기</a><br>
+
+  <a href="https://www.youtube.com/watch?v=SOr1Lwxnrv8" target="_blank" title="더나은삶TV">
+    트럼프와 맞짱뜰 바이든과 샌더스의 실체는?! 이들이 되면 한반도는 어찌될까..??</a><br>
+
+  <a href="https://www.youtube.com/watch?v=oelFn7E0fqY" target="_blank" title="슈카월드">
+    '양적 완화'란 무엇인가? 우리가 해야할 일은?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=LD0M-ge_w_g" target="_blank" title="더나은삶TV">
+    150조 굴리는 월가의 전설이 보는 주식시장 대폭락</a><br>
+
+  <a href="https://www.youtube.com/watch?v=o11rNsqQbPM" target="_blank" title="내일은 투자왕">
+    서킷 브레이커를 또 만난 올웨더. 알려드립니다</a><br>
+
   <a href="https://www.youtube.com/watch?v=n65UOPGmMtQ" target="_blank" title="삼프로TV_경제의신과함께">
     미국 연준이 가진 숨겨진 필살기, 양적완화 역대급 정리</a><br>
 
