--- a/Karazhan_library.html
+++ b/Karazhan_library.html
@@ -102,7 +102,8 @@
       [82년생 김지영]-조남주<br>
       [잠]-베르나르 베르베르<br>
       [삼국지]-나관중<br>
-      [데미안]-헤르만 헤세
+      [데미안]-헤르만 헤세<br>
+      [위대한 개츠비]-스콧 피츠제럴드
     <h3><strong>자기계발</h3></strong>
       [기획자의 습관]-최장순
     <h3><strong>에세이</h3></strong>
@@ -123,6 +124,8 @@
         <br>
         <li>사회학: [재미란 무엇인가?]-벤 핀첨</li>
         <li>경영: [반대의 놀라운 힘]-샬런 네메스</li>
+        <li>소설: [위대한 개츠비]-스콧 피츠제럴드</li>
+
     </p></pre>
 
     <p><pre>
