--- a/Strategy_and_tactics.html
+++ b/Strategy_and_tactics.html
@@ -53,6 +53,9 @@
 
 
 
+    <a href="https://www.youtube.com/watch?v=weAjAcUXKSc" target="_blank" title="쉬운바둑">
+      화점정석 #6</a><br>
+
     <a href="https://www.youtube.com/watch?v=hCq6n1I9pdY" target="_blank" title="쉬운바둑">
       화점정석 #5</a><br>
 
