--- a/The_economist.html
+++ b/The_economist.html
@@ -51,7 +51,11 @@
 
 
 
+  <a href="https://www.youtube.com/watch?v=QiDfSGN3cUI" target="_blank" title="삼프로TV_경제의신과함께">
+    1년 후를 본다면 지금은 담을 때 (f.김한진)</a><br>
 
+  <a href="https://www.youtube.com/watch?v=g0xg0ANFx_4" target="_blank" title="삼프로TV_경제의신과함께">
+    연준이 곳간을 열었다, 시장은 반응했다 (f.오건영)</a><br>
 
   <a href="https://www.youtube.com/watch?v=PS85r2CDcHE" target="_blank" title="삼프로TV_경제의신과함께">
     누구도 예측 못한 주가하락, 끝은 어디에? (김한진 박사)</a><br>
