--- a/Show_yourself.html
+++ b/Show_yourself.html
@@ -52,6 +52,9 @@
 
 
 
+    <a href="https://www.youtube.com/watch?v=y2vjOJxUMas" target="_blank" title="더나은삶TV">
+      내향적인 사람이 각성하면 전세계를 씹어먹는 이유</a><br>
+
     <a href="https://www.youtube.com/watch?v=60cvryTrgTk" target="_blank" title="더나은삶TV">
       남이 평생 쌓은 지혜를 한순간에 훔치는 방법</a><br>
 
