--- a/Strategy_and_tactics.html
+++ b/Strategy_and_tactics.html
@@ -52,6 +52,14 @@
 
 
 
+    <a href="https://www.youtube.com/watch?v=fa3AMpgBLgo" target="_blank" title="세이브">
+      EVE Online review - What is EVE</a><br>
+
+    <a href="https://www.youtube.com/watch?v=MM9kqZ--9Zc" target="_blank" title="쉬운바둑">
+      화점정석 #8</a><br>
+
+    <a href="https://www.youtube.com/watch?v=MM9kqZ--9Zc" target="_blank" title="쉬운바둑">
+      화점정석 #7</a><br>
 
     <a href="https://www.youtube.com/watch?v=weAjAcUXKSc" target="_blank" title="쉬운바둑">
       화점정석 #6</a><br>
