--- a/The_economist.html
+++ b/The_economist.html
@@ -51,6 +51,26 @@
 
 
 
+
+
+  <a href="https://www.youtube.com/watch?v=YSZzSxLm0Uo" target="_blank" title="삼프로TV_경제의신과함께">
+    삼성전자 매수를 바라보는 반도체 애널리스트의 전망</a><br>
+
+  <a href="https://www.youtube.com/watch?v=0aJHevT1q98" target="_blank" title="삼프로TV_경제의신과함께">
+    그들은 어떻게 주가를 조작하는가? (f. 김정수 대표)</a><br>
+
+  <a href="https://www.youtube.com/watch?v=iV3rFXGJ-Sw" target="_blank" title="삼프로TV_경제의신과함께">
+    [코로나 대책 특별방송] 의사, 과학자들이 보는 코로나 19 과연 언제까지?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=hMGMeC-kj3Y" target="_blank" title="삼프로TV_경제의신과함께">
+    1주일 앞으로 다가온 삼성전자 실적 발표, 전세계 IT 주식의 바로미터?_오늘아침page2_이승우, 곽상준</a><br>
+
+  <a href="https://www.youtube.com/watch?v=q1rHmyks0lo" target="_blank" title="삼프로TV_경제의신과함께">
+    지난 10년간의 주식 법칙이 깨지다?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=ehCgeABqOrk" target="_blank" title="삼프로TV_경제의신과함께">
+    확진자수 증가에도 상승하는 미국 증시, 다음 상황은?</a><br>
+
   <a href="https://www.youtube.com/watch?v=QiDfSGN3cUI" target="_blank" title="삼프로TV_경제의신과함께">
     1년 후를 본다면 지금은 담을 때 (f.김한진)</a><br>
 
