--- a/Game_industry_trends.html
+++ b/Game_industry_trends.html
@@ -51,6 +51,10 @@
 
 
 
+
+    <a href="https://www.youtube.com/watch?v=fa3AMpgBLgo" target="_blank" title="세이브">
+      EVE Online review - What is EVE</a><br>
+
     <a href="https://www.youtube.com/watch?v=JX0_yp-SJxQ" target="_blank" title="집마 홀릭TV">
       갓 오브 워 4편(최종화) 스토리 정리</a><br>
 
