--- a/Stock_investment.html
+++ b/Stock_investment.html
@@ -53,6 +53,9 @@
 
 
 
+    <a href="https://www.youtube.com/watch?v=WFXhqsMqRa4" target="_blank" title="자유잍튜브THE">
+      동학개미운동 가즈아! 좋아. 그런데 하나만 명심하자.</a><br>
+
     <a href="https://www.youtube.com/watch?v=U5vnEGdIAVY" target="_blank" title="ClayTrader">
       How to (Safely) Practice Trading Stocks Using Real Money</a><br>
 
