--- a/The_economist.html
+++ b/The_economist.html
@@ -52,6 +52,41 @@
 
 
 
+  <a href="https://www.youtube.com/watch?v=nH03tIJ49Ec" target="_blank" title="자유잍튜브THE">
+    이젠 하락이 올까? 150조 현금보유 워런 버핏의 행동에서 배울 점</a><br>
+
+  <a href="https://www.youtube.com/watch?v=flLJNik17ZY" target="_blank" title="자유잍튜브THE">
+    중국을 주목하라. 쉽게 찾아오는 기회가 아니다</a><br>
+
+  <a href="https://www.youtube.com/watch?v=_L1Wo4e_98o" target="_blank" title="자유잍튜브THE">
+    레이달리오, 워렌버핏의 4Q 포트폴리오가 전하는 메시지</a><br>
+
+  <a href="https://www.youtube.com/watch?v=CCvzpa3v5xY" target="_blank" title="삼프로TV_경제의신과함께">
+    개인 투자자의 삼성전자 집중 매수를 보는 전문가의 시각 (f.김학균)</a><br>
+
+  <a href="https://www.youtube.com/watch?v=YbaHhbyHLa8" target="_blank" title="삼프로TV_경제의신과함께">
+    코로나 백신과 5분 진단키트에 다우 3% 반등</a><br>
+
+  <a href="https://www.youtube.com/watch?v=2hOeIhZSyMY" target="_blank" title="리뷰엉이">
+    중국발 전염병을 정확히 예측한 빌게이츠</a><br>
+
+  <a href="https://www.youtube.com/watch?v=oJm9OVYL9ag" target="_blank" title="슈카월드">
+    금리의 쉬운 이해! '장단기 금리 역전'의 의미는?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=fNXw8LkN5fY" target="_blank" title="더나은삶TV">
+    사모펀드란 무엇인가 가장 쉽게 설명합니다 제2편 (돈은 누가 벌까?)</a><br>
+
+  <a href="https://www.youtube.com/watch?v=RXfQLUFO3UY" target="_blank" title="더나은삶TV">
+    사모펀드란 무엇인가 가장 쉽게 설명합니다 제1편 (기본개념과 구조)</a><br>
+
+  <a href="https://www.youtube.com/watch?v=GOLsIax3P18" target="_blank" title="삼프로TV_경제의신과함께">
+    낮아진 유가레벨, 미국 셰일기업의 연쇄 부도 가능성 점검! (f.최진영)</a><br>
+
+  <a href="https://www.youtube.com/watch?v=zidAjeHXP5g" target="_blank" title="삼프로TV_경제의신과함께">
+    美 재정지원 여부에 따른 상승폭의 변화 (f.박제영)</a><br>
+
+  <a href="https://www.youtube.com/watch?v=TAS9-JNn5iU" target="_blank" title="더나은삶TV">
+    천문학적 돈을 풀어 큰그림을 완성시키겠다는 중국의 계획</a><br>
 
   <a href="https://www.youtube.com/watch?v=YSZzSxLm0Uo" target="_blank" title="삼프로TV_경제의신과함께">
     삼성전자 매수를 바라보는 반도체 애널리스트의 전망</a><br>
