--- a/Strategy_and_tactics.html
+++ b/Strategy_and_tactics.html
@@ -52,8 +52,24 @@
 
 
 
+
+    <a href="https://www.youtube.com/watch?v=ytjguQvPkfs" target="_blank" title="세이브">
+      EVE Online - Advanced Military Career Mission</a><br>
+
+    <a href="https://www.youtube.com/watch?v=NTzekOzvp9U" target="_blank" title="쉬운바둑">
+      [ 삼삼침투 정석 ] 흑이 막기 위해선 조건이 있습니다</a><br>
+
+    <a href="https://www.youtube.com/watch?v=gJSvFM7aGuw" target="_blank" title="세이브">
+      EVE Online - Industry Career Mission</a><br>
+
+    <a href="https://www.youtube.com/watch?v=fr6KKZ-2USw" target="_blank" title="세이브">
+      EVE Online - Military career mission</a><br>
+
     <a href="https://www.youtube.com/watch?v=fa3AMpgBLgo" target="_blank" title="세이브">
       EVE Online review - What is EVE</a><br>
+
+    <a href="https://www.youtube.com/watch?v=Pm1zasTSNP0" target="_blank" title="쉬운바둑">
+      화점정석 #9</a><br>
 
     <a href="https://www.youtube.com/watch?v=MM9kqZ--9Zc" target="_blank" title="쉬운바둑">
       화점정석 #8</a><br>
