--- a/Karazhan_library.html
+++ b/Karazhan_library.html
@@ -70,7 +70,6 @@
       [재무제표 행간을 읽어라]-김대욱<br>
       [내일의 부: 알파편]-조던 김상섭<br>
       [내일의 부: 오메가편]-조던 김상섭
-
     <h3><strong>역사</h3></strong>
       [거의 모든 IT의 역사]-정지훈<br>
       [약자를 위한 현실주의]-이주희<br>
@@ -103,7 +102,8 @@
       [잠]-베르나르 베르베르<br>
       [삼국지]-나관중<br>
       [데미안]-헤르만 헤세<br>
-      [위대한 개츠비]-스콧 피츠제럴드
+      [위대한 개츠비]-스콧 피츠제럴드<br>
+      [별을 위한 시간]-로버트 A. 하인라인
     <h3><strong>자기계발</h3></strong>
       [기획자의 습관]-최장순
     <h3><strong>에세이</h3></strong>
@@ -113,6 +113,19 @@
     </p></pre>
 
 
+
+    <p><pre>
+      <h2>2020년 4월 독서</h2>
+        <li>경제/경영:</li>
+        <li>역사:</li>
+        <li>철학:</li>
+        <li>심리학/처세술:</li>
+        <li>과학:</li>
+        <br>
+        <li>사회학:</li>
+        <li>경영:</li>
+        <li>소설: [별을 위한 시간]-로버트 A. 하인라인</li>
+    </p></pre>
 
     <p><pre>
       <h2>2020년 3월 독서</h2>
@@ -125,7 +138,6 @@
         <li>사회학: [재미란 무엇인가?]-벤 핀첨</li>
         <li>경영: [반대의 놀라운 힘]-샬런 네메스</li>
         <li>소설: [위대한 개츠비]-스콧 피츠제럴드</li>
-
     </p></pre>
 
     <p><pre>
@@ -144,7 +156,6 @@
         <li>경제: [재무제표 행간을 읽어라]-김대욱</li>
         <li>역사: [하룻밤에 읽는 한국 근현대사]-최용범</li>
         <li>경제: [내일의 부: 알파편]-조던 김상섭<li>
-
     </p></pre>
 
     <p><pre>
