--- a/Stock_investment.html
+++ b/Stock_investment.html
@@ -53,6 +53,21 @@
 
 
 
+    <a href="https://www.youtube.com/watch?v=JH73QgrWePo" target="_blank" title="자유잍튜브THE">
+      혼란스러운 주식 시장, 어디에 어떻게 투자하면 좋나?</a><br>
+
+    <a href="https://www.youtube.com/watch?v=F_WZOQDnRsE" target="_blank" title="자유잍튜브THE">
+      2020년 주식 시장, 강한 기업은 어디인가? YTD 플러스 수익률 기업 122개</a><br>
+
+    <a href="https://www.youtube.com/watch?v=RbCvE87KCvs" target="_blank" title="삼프로TV_경제의신과함께">
+      코로나19로 인한 글로벌 주식 시장의 흐름은?_f.이경민</a><br>
+
+    <a href="https://www.youtube.com/watch?v=nH03tIJ49Ec" target="_blank" title="자유잍튜브THE">
+      이젠 하락이 올까? 150조 현금보유 워런 버핏의 행동에서 배울 점</a><br>
+
+    <a href="https://www.youtube.com/watch?v=nZtfhalAVuQ" target="_blank" title="내일은 투자왕 - 김단테">
+      140조의 사나이 하워드 막스가 직접 말해주는 코로나 투자지침</a><br>
+
     <a href="https://www.youtube.com/watch?v=WFXhqsMqRa4" target="_blank" title="자유잍튜브THE">
       동학개미운동 가즈아! 좋아. 그런데 하나만 명심하자.</a><br>
 
