--- a/Strategy_and_tactics.html
+++ b/Strategy_and_tactics.html
@@ -53,8 +53,8 @@
 
 
 
-    <a href="https://www.youtube.com/watch?v=ytjguQvPkfs" target="_blank" title="세이브">
-      EVE Online - Advanced Military Career Mission</a><br>
+    <a href="https://www.youtube.com/watch?v=1JB0iqMObss" target="_blank" title="쉬운바둑">
+      [3단젖힘 결과] 누가 손해일까?</a><br>
 
     <a href="https://www.youtube.com/watch?v=NTzekOzvp9U" target="_blank" title="쉬운바둑">
       [ 삼삼침투 정석 ] 흑이 막기 위해선 조건이 있습니다</a><br>
