--- a/The_economist.html
+++ b/The_economist.html
@@ -52,8 +52,9 @@
 
 
 
-  <a href="https://www.youtube.com/watch?v=nH03tIJ49Ec" target="_blank" title="자유잍튜브THE">
-    이젠 하락이 올까? 150조 현금보유 워런 버핏의 행동에서 배울 점</a><br>
+
+  <a href="https://www.youtube.com/watch?v=inXBXUp-iHA" target="_blank" title="자유잍튜브THE">
+    판데믹과 고삐풀린 돈. 새로운 시대는 어떻게 열릴까?</a><br>
 
   <a href="https://www.youtube.com/watch?v=flLJNik17ZY" target="_blank" title="자유잍튜브THE">
     중국을 주목하라. 쉽게 찾아오는 기회가 아니다</a><br>
